@@ -3,7 +3,6 @@ package com.shagui.sdc.service.impl;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -15,7 +14,7 @@ import com.shagui.sdc.service.DatalistService;
 public class DatalistServiceImpl implements DatalistService {
 	@Override
 	public List<String> availables() {
-		return StaticRepository.datalists().stream().map(DataListModel::getName).collect(Collectors.toList());
+		return StaticRepository.datalists().stream().map(DataListModel::getName).toList();
 	}
 
 	@Override
